--- a/sass/elements/text.scss
+++ b/sass/elements/text.scss
@@ -1,15 +1,14 @@
-p,
-li,
-span {
-  font-family: sans-serif;
-}
+
 
 p {
   margin-top: 0;
   margin-bottom: 16px;
+  padding: 0 0.25em;
+
   text-align: justify;
   hyphens: auto;
   font-kerning: normal;
+  font-variant-ligatures: normal;
   // font-variant-ligatures: common-ligatures contextual discretionary-ligatures historical-ligatures;
 }
 
