change codeblock size

--- a/sass/elements/code.scss
+++ b/sass/elements/code.scss
@@ -1,11 +1,9 @@
 pre {
   font-family: monospace, monospace;
-  font-size: 1em;
+  font-size: 0.9em;
   border-radius: 5px;
-  padding: 1em;
+  padding: 0.5em 0.75em;
   overflow-x: scroll;
-
-  // box-shadow: 0 3px 3px #717171;
 
   span {
     font-family: inherit !important;
