--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -39,6 +39,7 @@ nav {
     flex-wrap: wrap;
     flex-direction: row;
     align-items: center;
+    justify-content: center;
     width: max-content;
 
     margin: 0 auto;
