--- a/sass/elements/quote.scss
+++ b/sass/elements/quote.scss
@@ -1,14 +1,49 @@
-blockquote {
+blockquote,
+.text-note {
   margin: 0;
   padding: 0 1em;
   margin-bottom: 1em;
-  color: #57606a;
-  border-left: 0.25em solid #d0d7de;
+  border-left-width: 0.25em;
+  border-left-style: solid;
 
   & > :first-child {
     margin-top: 0;
   }
   & > :last-child {
     margin-bottom: 0;
+  }
+}
+
+blockquote {
+  color: #57606a;
+  border-left-color: #d0d7de;
+}
+
+.text-note {
+  color: black;
+
+  .note-title {
+    margin-bottom: 0.5em;
+  }
+
+  &[data-type="info"] {
+    border-left-color: #0969da;
+    .note-title {
+      color: #0969da;
+    }
+  }
+
+  &[data-type="note"] {
+    border-left-color: #9a6700;
+    .note-title {
+      color: #9a6700;
+    }
+  }
+
+  &[data-type="warning"] {
+    border-left-color: #cf222e;
+    .note-title {
+      color: #cf222e;
+    }
   }
 }
