--- a/templates/base.html
+++ b/templates/base.html
@@ -29,7 +29,7 @@
         {% if current_url %}<link rel="canonical" href="{{current_url | safe}}" />{% endif %}
 
         <link rel="alternate" type="application/rss+xml" title="RSS"
-            href="{{get_url(path=config.feed_filename, trailing_slash=false) | safe}}">
+            href="{{get_url(path=config.feed_filenames[0], trailing_slash=false) | safe}}">
 
         {# OpenGraph #}
         <meta name="twitter:card" content="summary" />
