Tweak layout a little

--- a/templates/base.html
+++ b/templates/base.html
@@ -107,7 +107,8 @@
             {# <li><a href="/projects">Projects</a></li> #}
             <li><a href="/hobbies">Hobbies</a></li>
             {# <li><a href="/photography">Photos</a></li> #}
-            <li><a href="/contact">Contact</a></li>
+            {# <li><a href="/contact">Contact</a></li> #}
+            {# <li><a href="/hobbies">More</a></li> #}
         </ul>
         <hr>
     </nav>
