Hide sponsor block

--- a/templates/base.html
+++ b/templates/base.html
@@ -144,14 +144,14 @@
 
     {# Footer #}
     <footer>
-        {% if is_blog_post or is_photo_page %}
+        {# {% if is_blog_post or is_photo_page %}
         <br>
         <p id="sponsor-notice">
             Consider making
             <a href="https://ewp.fyi/donate" style="text-decoration:underline;" target="_blank">a small donation</a>
             to support my work!
         </p>
-        {% endif %}
+        {% endif %} #}
         <br>
         <hr>
         <p id="copyright">
