--- a/templates/base.html
+++ b/templates/base.html
@@ -102,10 +102,10 @@
         <ul>
             <li><a href="/">Home</a></li>
             <li><a href="/blog">Blog</a></li>
-            {# <li><a href="/radio">Radio</a></li> #}
-            {# <li><a href="/music">Music</a></li> #}
+            <li><a href="/radio">Radio</a></li>
+            <li><a href="/music">Music</a></li>
             {# <li><a href="/projects">Projects</a></li> #}
-            <li><a href="/hobbies">Hobbies</a></li>
+            {# <li><a href="/hobbies">Hobbies</a></li> #}
             {# <li><a href="/photography">Photos</a></li> #}
             {# <li><a href="/contact">Contact</a></li> #}
             {# <li><a href="/hobbies">More</a></li> #}
