--- a/sass/elements/table.scss
+++ b/sass/elements/table.scss
@@ -7,7 +7,7 @@ table {
   overflow: auto;
 
   // NOTE: Things don't look great if you do this
-  // margin: auto;
+  margin: auto;
 
   td,
   th {
