--- a/sass/elements/text.scss
+++ b/sass/elements/text.scss
@@ -4,6 +4,7 @@ p {
   margin-top: 0;
   margin-bottom: 16px;
   padding: 0 0.25em;
+  font-size: 1.25rem;
 
   text-align: justify;
   hyphens: auto;
