--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -1,7 +1,8 @@
 // Note: Some things are broken out into smaller files
 
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+// @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap');
 
 $content-max-width: 800px;
 
@@ -10,8 +11,9 @@ $content-max-width: 800px;
 body {
   margin: 1em;
   // font-family: serif;
-  font-family: "Noto Sans", sans-serif;
+  font-family: "Overlock", sans-serif;
   font-optical-sizing: auto;
+  background-color: #f7f4f4;
 }
 
 a {
