--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -3,12 +3,30 @@
 
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% if page.override_title %}{{page.override_title}}{% else %}{{page.title}} | {{site.title}}{% endif %}</title>
+    <title>{% if page.override_title %}{{page.override_title}}{% else %}{{page.title}} | {{site.title}}{% endif %}
+    </title>
 </head>
+
 <body>
-{{ content }}
+    <header>
+        
+    </header>
+    <main>
+        {{ content }}
+    </main>
+    <hr>
+    <footer>
+        <p>
+            Copyright &copy; 2017 - {{ site.time | date: '%Y' }}
+            <strong>
+                Evan Warren Pratten
+            </strong>
+        </p>
+    </footer>
 </body>
+
 </html>
