--- a/src/_layouts/photo.html
+++ b/src/_layouts/photo.html
@@ -8,14 +8,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>"{{page.title}}" by {{site.title}}</title>
+    <link rel="stylesheet" href="/assets/css/photo_compiled.css">
 </head>
 
 <body>
     <main>
         <img src="/assets/photography/{{ page.file }}" alt="A photo titled: {{ page.title }}" style="width: 100%;">
-        <div style="display: flex; justify-content: space-between;">
-            <span>{{ page.title }}</span>
-            <span>{{ page.date | date: "%Y-%m-%d" }}</span>
+        <div class="description">
+            <h1>{{ page.title }}</h1>
+            <span id="date">Shot {{ page.date | date: "%Y-%m-%d" }} by <a href="/">Evan Pratten</a></span>
+            <p>
+                {{ content }}
+            </p>
         </div>
     </main>
 </body>
