--- a/src/_sass/default.scss
+++ b/src/_sass/default.scss
@@ -99,11 +99,14 @@ body {
       padding-bottom: 0.3em;
     }
 
+    p,li {
+      font-size: 1.25rem;
+    }
+
     p {
       margin-top: 0;
       margin-bottom: 16px;
       padding: 0 0.25em;
-      font-size: 1.25rem;
     }
 
     img {
