--- a/src/_layouts/photo.html
+++ b/src/_layouts/photo.html
@@ -8,6 +8,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>"{{page.title}}" by {{site.title}}</title>
+    <link rel="shortcut icon" type="image/jpg" href="{{ site.profile_photo }}" />
     <link rel="stylesheet" href="/assets/css/photo_compiled.css">
 </head>
 
