--- a/src/_sass/default.scss
+++ b/src/_sass/default.scss
@@ -110,6 +110,9 @@ body {
     }
 
     img {
+      display: block;
+      margin: auto;
+      max-width: 100%;
       border-radius: 5px;
     }
   }
