--- a/src/_sass/photo.scss
+++ b/src/_sass/photo.scss
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Serif:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap");
-@import url("https://fonts.googleapis.com/css2?family=Overlock:ital,wght@0,400;0,700;0,900;1,400;1,700;1,900&display=swap");
+@use "common/font.scss" as *;
 
 body {
   display: flex;
@@ -11,7 +10,7 @@ body {
   margin: 0;
   padding: 0;
 
-  font-family: "Overlock", sans-serif;
+  font-family: $body-font;
   background-color: #f0f0f0;
 
   main {
@@ -39,7 +38,7 @@ body {
       }
 
       h1 {
-        font-family: "IBM Plex Serif", serif;
+        font-family: $title-font;
         margin-bottom: 0;
       }
 
