--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -14,6 +14,11 @@
     <link rel="canonical" href="{{ site.url }}{{ page.url | replace: '.html', '' }}" />
     <link rel="stylesheet" href="/assets/css/default_compiled.css">
     <link rel="stylesheet" href="/assets/css/highlight/vs.css">
+    {% if page.custom_css %}
+    <!--noformat-->
+    <style>{{ page.custom_css }}</style>
+    <!--noformat-->
+    {% endif %}
 </head>
 
 <body>
@@ -61,7 +66,7 @@
         <div class="page-title">
             <h1>{{ page.title }}</h1>
             {% if page.description %}
-             <span>{{ page.description }}</span>
+            <span>{{ page.description }}</span>
             {% endif %}
         </div>
         {% endif %}
