--- a/src/_sass/default.scss
+++ b/src/_sass/default.scss
@@ -4,6 +4,7 @@ body {
   // Keep websites thin!
   max-width: 800px;
   margin: auto;
+  padding: 0 1em;
 
   // Default font
   font-family: $body-font;
@@ -113,7 +114,7 @@ body {
 
     p,
     li {
-      // font-size: 1.25rem;
+      font-size: 1.1rem;
     }
 
     p {
