--- a/src/_sass/default.scss
+++ b/src/_sass/default.scss
@@ -121,6 +121,7 @@ body {
       margin-top: 0;
       margin-bottom: 16px;
       padding: 0 0.25em;
+      line-height: 1.5em;
     }
 
     img {
@@ -131,11 +132,21 @@ body {
     }
 
     pre {
-      width: 100%;
       overflow: scroll;
       border: 1px solid gray;
       border-radius: 5px;
       padding: 1em;
+    }
+
+    p,
+    li {
+      & > code {
+        font-size: 0.9em;
+        background-color: #f0f0f0;
+        padding: 0.1em 0.25em;
+        border: 1px solid #d0d0d0;
+        border-radius: 3px;
+      }
     }
   }
 
