--- a/src/_sass/music.scss
+++ b/src/_sass/music.scss
@@ -1,4 +1,5 @@
 @use "common/font.scss" as *;
+@use "common/table.scss" as *;
 
 body {
   display: flex;
@@ -28,7 +29,7 @@ body {
       border-top-right-radius: inherit;
     }
 
-    &>div {
+    & > div {
       padding: 1em;
       padding-top: 0;
 
@@ -39,25 +40,6 @@ body {
 
       table {
         width: 100%;
-        border-collapse: collapse;
-
-        thead {
-          font-weight: bold;
-          background-color: #d8d8d8;
-        }
-
-        th, td {
-          padding: 0.5em;
-          border: 1px solid gray;
-        }
-
-        th {
-          background-color: #f0f0f0;
-        }
-
-        tr:nth-child(even) {
-          background-color: #f8f8f8;
-        }
       }
     }
   }
