--- a/src/_sass/photo.scss
+++ b/src/_sass/photo.scss
@@ -26,6 +26,7 @@ body {
     img {
       max-width: 800px;
       border: 5px solid black;
+      box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
     }
 
     div.description {
