--- a/src/_layouts/default.html
+++ b/src/_layouts/default.html
@@ -10,10 +10,25 @@
     <title>
         {% if page.override_title %}{{page.override_title}}{% else %}{{page.title}} | {{site.title}}{% endif %}
     </title>
+    <meta property="og:title" content="{% if page.override_title %}{{page.override_title}}{% else %}{{page.title}} | {{site.title}}{% endif %}" />
     <link rel="shortcut icon" type="image/jpg" href="{{ site.profile_photo }}" />
     <link rel="canonical" href="{{ site.url | downcase }}{{ page.url | replace: '.html', '' | downcase }}" />
     <link rel="stylesheet" href="/assets/css/default_compiled.css">
     <link rel="stylesheet" href="/assets/css/highlight/vs.css">
+
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:type" content="article" />
+    <meta name="og:site" content="{{ site.url | downcase }}" />
+    <meta name="og:site_name" content="{{ site.title }}" />
+    <meta name="og:image" content="{{ site.profile_photo }}" />
+
+    {% if page.description %}
+        <meta property="og:description" content="{{page.description}}" />
+        <meta property="description" content="{{page.description}}" />
+        <meta name="description" content="{{page.description}}">
+    {% endif %}
+    {% if page.date %}<meta property="article:published_time" content="{{page.date}}" />{% endif %}
+
     {% if page.custom_css %}
     <!--noformat-->
     <style>{{ page.custom_css }}</style>
