--- a/src/_layouts/music.html
+++ b/src/_layouts/music.html
@@ -23,6 +23,14 @@
     <link rel="canonical" href="{{ site.url | downcase }}{{ page.url | replace: '.html', '' | downcase }}" />
     <link rel="stylesheet" href="/assets/css/music_compiled.css">
 
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:type" content="article" />
+    <meta name="og:site" content="{{ site.url | downcase }}" />
+    <meta name="og:site_name" content="{{ site.title }}" />
+    <meta property="og:title" content='{{ page.title }} | {{ site.title }}' />
+    <meta name="og:image" content="{{ page.cover_image }}" />
+    {% if page.date %}<meta property="article:published_time" content="{{page.date}}" />{% endif %}
+
 </head>
 
 <body>
