Allow custom referrers

--- a/src/_includes/goatcounter.html
+++ b/src/_includes/goatcounter.html
@@ -1,1 +1,7 @@
-<script async="" data-goatcounter="https://analytics.ewpratten.com/count" src="//gc.zgo.at/count.js" type="text/javascript"></script>
+<script>
+    if (goatcounter.get_query("cr")) {
+        window.goatcounter = { referrer: `Custom: ${goatcounter.get_query("cr")}` };
+    }
+</script>
+<script async data-goatcounter="https://analytics.ewpratten.com/count" src="//gc.zgo.at/count.js"
+    type="text/javascript"></script>
