--- a/src/_includes/goatcounter.html
+++ b/src/_includes/goatcounter.html
@@ -1,7 +1,7 @@
 <script>
     let query_params = new URLSearchParams(window.location.search);
     if (query_params.has("cr")) {
-        window.goatcounter = { referrer: `Custom: ${query_params.get("cr")}` };
+        window.goatcounter = { referrer: `custom-${query_params.get("cr")}` };
         history.replaceState({}, document.title, window.location.pathname);
     }
 </script>
